# chocs

./: .coverage  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-request.md
.github/workflows/: codeql-analysis.yml  main.yaml  release.yml
chocs/: __init__.py  __version__.py  application.py  chocs.py  cookie_jar.py  cookies.py  errors.py  headers.py  http_body.py  http_cookies.py  http_error.py  http_headers.py  http_message.py  http_method.py  http_multipart_message_parser.py  http_parsed_body.py  http_query_string.py  http_request.py  http_response.py  http_status.py  json_schema.py  middleware.py  query_string.py  router_middleware.py  routing.py  serverless.py  testing.py  types.py  wsgi.py
chocs/console/: application.py  generate_dto.py
chocs/dataclasses/: __init__.py  dataclass.py  hydration.py  hydrators.py  support.py  typing.py
chocs/errors/: __init__.py  application_error.py  cookie_error.py  http_error.py  not_found_error.py
chocs/http/: __init__.py  http_body.py  http_cookies.py  http_headers.py  http_message.py  http_multipart_message_parser.py  http_parsed_body.py  http_query_string.py  http_request.py  http_response.py  http_status.py
chocs/json_schema/: __init__.py  array_validators.py  combining_validators.py  errors.py  format_validators.py  iso_datetime.py  json_schema.py  number_validators.py  object_validators.py  schema_validator.py  string_format.py  string_validators.py  type_validators.py  validators.py
chocs/message/: __init__.py  body.py  form_body.py  json_body.py  multipart_body.py
chocs/middleware/: __init__.py  application_middleware.py  middleware.py  middleware_handler.py  middleware_pipeline.py  open_api_middleware.py  parsed_body_middleware.py  router_middleware.py  routing_middleware.py
chocs/query/: __init__.py  expression.py  query_criteria.py  sorting.py
chocs/rest/: query.py
chocs/routing/: __init__.py  route.py  router.py
chocs/serverless/: __init__.py  aws.py  serverless.py  wrapper.py
chocs/wsgi/: __init__.py  bjoern_support.py  cherrypy_support.py  gunicorn_support.py  wsgi_support.py
examples/: README.md  cookies_example.py  example_middleware.py  hello_world.py
examples/dataclass_support/: hiding_fields_from_extraction.py  hiding_fields_from_hydration.py  hydrating_enums.py  hydrating_nested_dataclasses.py  hydrating_simple_dataclass.py  using_default_values.py  working_with_generics.py
examples/gunicorn_example/: app.py
examples/input_validation_with_open_api/: main.py
examples/loading_modules/: app.py  main.py  routes.py
examples/mapping_request_body/: main.py
examples/serverless/: app.py  handler.py  main.py  package-lock.json  pyproject.toml  routes.yml
examples/serverless_single_lambda/: handler.py  package.json  pyproject.toml  routes.yml  serverless.yml
performance_tests/: hello_world.py  raw_bjoern.py
tests/: test_application.py  test_aws_serverless.py  test_cookies.py  test_headers.py  test_http_message.py  test_http_request.py  test_http_response.py  test_http_status.py  test_jsonschema.py  test_middleware_pipeline.py  test_query_string.py  test_routing.py  test_sub_routing.py  test_test_client.py  test_wsgi.py
tests/console/: test_generate_dto.py
tests/dataclasses/: test_dataclass_hydrator.py  test_dataclass_support.py  test_datetime_strategy.py  test_deque_strategy.py  test_dict_strategy.py  test_enum_hydration.py  test_enum_strategy.py  test_frozenset_strategy.py  test_generic_strategy.py  test_list_hydrator.py  test_list_strategy.py  test_named_tuple_strategy.py  test_optional_strategy.py  test_ordered_dict_strategy.py  test_set_strategy.py  test_tuple_strategy.py  test_typed_dict_strategy.py  test_union_strategy.py
tests/fixtures/: generated_dtos.py  lambda_http_api_environment.json  lambda_http_api_event.json  lambda_rest_api_environment.json  lambda_rest_api_event.json  lambda_rest_api_event_without_headers.json  lambda_rest_api_multipart_form_image_upload.json  new_pet.yml  openapi.yml  routes_fixture.py  (+1 more)
(+38 files in other folders)
