[tool.poetry]
name = "chocs"
version = "0.1.1"
description = "Lightweight and powerful layer for building rest applications based on wsgi servers."
authors = [
    "Dawid Kraczkowski <dawid.kraczkowski@gmail.com>",
    "Gez Page <gezpage@gmail.com>"
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/kodemore/chocs"
repository = "https://github.com/kodemore/chocs"
documentation = "https://github.com/kodemore/chocs"

keywords = ["rest", "http", "http framework", "wsgi", "request", "response", "cookies"]

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^4.1.0"
pytest-cov = "^2.5"
pytest-mock = "^1.9"
mypy = "^0.730.0"
black = { version = "^19.3b0", python = "^3.6" }
bjoern = "^3.0"
