[tool.poetry]
name = "chocs-serverless-test"
version = "0.1.0"
description = ""
authors = ["dkraczkowski <dawid.kraczkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
chocs = "0.3.0b"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
